--- a/src/neo/components/ProjectHeader/style.css
+++ b/src/neo/components/ProjectHeader/style.css
@@ -36,4 +36,5 @@
 
 .header .buttons {
   display: flex;
+  align-items: center;
 }
